--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
         }
 
         async function simulateResearch(query) {
-            const API_BASE_URL = 'http://localhost:5000/api';
+            const API_BASE_URL = 'https://openalex-api.onrender.com/api';
             try {
                 const response = await fetch(`${API_BASE_URL}/research`, {
                     method: 'POST',
