--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ body {
 <body>
     <div class="header">
         <div class="robot-icon">🤖</div>
-        <h1>Library Chatbot By Wexor ai</h1>
+        <h1>Library Chatbot By WexorAI</h1>
         <p>Ask me about books, library services and research materials and information resources</p>
     </div>
 
